19 May 2016: Wouter
	- Fix #766: dns64 should synthesize results on timeout/errors.

18 May 2016: Wouter
	- Fix #761: DNSSEC LAME false positive resolving nic.club.

17 May 2016: Wouter
	- trunk updated with output of flex 2.6.0.

6 May 2016: Wouter
	- Fix memory leak in out-of-memory conditions of local zone add.

29 April 2016: Wouter
	- Fix sldns with static checking fixes copied from getdns.

28 April 2016: Wouter
	- Fix #759: 0x20 capsforid no longer checks type PTR, for
	  compatibility with cisco dns guard.  This lowers false positives.

18 April 2016: Wouter
	- Fix some malformed reponses to edns queries get fallback to nonedns.

15 April 2016: Wouter
	- cachedb module event handling design.

14 April 2016: Wouter
	- cachedb module framework (empty).
	- iana portlist update.

12 April 2016: Wouter
	- Fix #753: document dump_requestlist is for first thread.

24 March 2016: Wouter
	- Document permit-small-holddown for 5011 debug.
	- Fix #749: unbound-checkconf gets SIGSEGV when use against a
	  malformatted conf file.

23 March 2016: Wouter
	- OpenSSL 1.1.0 portability, --disable-dsa configure option.

21 March 2016: Wouter
	- Fix compile of getentropy_linux for SLES11 servicepack 4.
	- Fix dnstap-log-resolver-response-messages, from Nikolay Edigaryev.
	- Fix test for openssl to use HMAC_Update for 1.1.0.
	- acx_nlnetlabs.m4 to v33, with HMAC_Update.
	- acx_nlnetlabs.m4 to v34, with -ldl -pthread test for libcrypto.
	- ERR_remove_state deprecated since openssl 1.0.0.
	- OPENSSL_config is deprecated, removing.

18 March 2016: Ralph
	- Validate QNAME minimised NXDOMAIN responses.
	- If QNAME minimisation is enabled, do cache lookup for QTYPE NS in
	  harden-below-nxdomain.

17 March 2016: Ralph
	- Limit number of QNAME minimisation iterations.

17 March 2016: Wouter
	- Fix #746: Fix unbound sets CD bit on all forwards.
	  If no trust anchors, it'll not set CD bit when forwarding to another
	  server.  If a trust anchor, no CD bit on the first attempt to a